# cfnsane

./: .gitignore  .gitignore.io  Dockerfile  README.md  cdk.json  package-lock.json  package.json  pyproject.toml  tasks.py
.github/workflows/: release.yml
cfnsane/: __init__.py  loader.py  meta.py
cfnsane/resources/: bucket.py  s3.py
lib/: app-stack.js  aspect.js  index.js  synthesize.js
lib/s3/: bucket.js  index.js
test/: app.test.js
tests/: conftest.py
tests/fixtures/: data.py
tests/fixtures/templates/in/: bucket.yml
tests/unit/: test_loader.py  test_meta.py  test_troposphere_loader.py
