[tool.poetry]
name = "cfnsane"
version = "0.1.0"
description = ""
authors = ["Michael Neil <mneil@mneilsworld.com>"]

[tool.poetry.dependencies]
python = "^3.8"
troposphere = "^2.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
PyYAML = "^5.3.1"
black = "^20.8b1"
invoke = "^1.5.0"
debugpy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
